--- a/fetalhealth.ipynb
+++ b/fetalhealth.ipynb
@@ -20,11 +20,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Reading CSV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "data = pd.read_csv('fetal_health.csv')\n",
+    "data.head()"
+   ]
   }
  ],
  "metadata": {
