changes made today - basic data cleaning and modelling

--- a/fetalhealth.ipynb
+++ b/fetalhealth.ipynb
@@ -16,7 +16,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt from scipy import stats\n",
+    "from sklearn.model_selection import train_test_split \n",
+    "from sklearn.metrics import accuracy_score, classification_report,confusion_matrix\n"
    ]
   },
   {
@@ -29,11 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_csv('fetal_health.csv')\n",
@@ -43,13 +41,220 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data.describe().T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How many of each classification exist in dataset?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[\"fetal_health\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data is unbalanced as it ~78% of its data points are of class 1.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overall correlation table "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.corr()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Correlation of other columns with fetal health "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.corr()['fetal_health'].sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write about notable correlations of fetal_health with other columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['severe_decelerations'].unique()\n",
+    "data[['severe_decelerations','fetal_health']].value_counts()\n",
+    "# drop severe_decelerations column because it is zero-inflated and doesn't add value to classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['prolongued_decelerations'].unique()\n",
+    "data[['prolongued_decelerations','fetal_health']].value_counts() # drop prolongued_decelerations column for same reason"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.hist(figsize=(20,15))\n",
+    "plt.show()\n",
+    "# LATER: change scale so max value of Y is same for all graphs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[['fetal_movement','fetal_health']].value_counts() # drop fetal_movement column for same reason"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write about why we drop it - zer-inflated, most of its values are zero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.plot(kind = \"box\" , subplots = True , layout= (5,5), figsize =(20,12) ) \n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the graphs above, we can see that there are visible outliers. As many machine learning models, like linear and logistic regression, are easily impacted by the outliers in the training data, we are removing the rows for each there is an outlier in any column."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remove outliers from data based on z-score\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data[(np.abs(stats.zscore(data)) < 3).all(axis=1)]\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.plot(kind = \"box\" , subplots = True , layout= (5,5), figsize =(20,12) )\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is visible that many outliers have been removed as the outliers in the boxplots for each column have decreased"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = data.iloc[:,:-1]\n",
+    "y = data.iloc[:,-1]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, stratify=y, random_state=45)\n",
+    "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a sentence about why we chose to do or not do stratify\n",
+    "(https://datascience.stackexchange.com/questions/40584/meaning-of-stratify-parameter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "classifier = KNeighborsClassifier(n_neighbors = 5, metric = 'minkowski', p = 2)\n",
+    "classifier.fit(X_train, y_train.values.ravel())\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "acc = accuracy_score(y_test, Y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # another model\n",
+    "from sklearn.svm import SVC\n",
+    "classifier1 = SVC(kernel = 'linear', random_state = 0)\n",
+    "classifier1.fit(X_train, y_train.values.ravel())\n",
+    "Y_pred = classifier1.predict(X_test)\n",
+    "acc1 = accuracy_score(y_test, Y_pred)\n",
+    "acc1"
+   ]
   }
  ],
  "metadata": {
